--- a/lithium/manage/templates/requirements.txt
+++ b/lithium/manage/templates/requirements.txt
@@ -1,12 +1,20 @@
 Flask==0.10.1
 Flask-Classy==0.6.7
+Flask-Migrate==0.1.4
+Flask-SQLAlchemy==1.0
 Flask-Script==0.6.3
+Flask-Admin==1.0.7
 Jinja2==2.7.1
+Mako==0.9.0
 MarkupSafe==0.18
+PyYAML==3.10
+SQLAlchemy==0.8.3
 Werkzeug==0.9.4
+alembic==0.6.1
+argcomplete==0.6.3
 argparse==1.2.1
+colorama==0.2.7
 itsdangerous==0.23
 nose==1.3.0
 requests==2.0.1
 wsgiref==0.1.2
-colorama==0.2.7
