--- a/lithium/manage/templates/requirements.txt
+++ b/lithium/manage/templates/requirements.txt
@@ -5,6 +5,7 @@ Flask-Migrate==0.1.4
 Flask-SQLAlchemy==1.0
 Flask-Script==0.6.3
 Flask-Admin==1.0.7
+Flask-Testing==0.4
 Jinja2==2.7.1
 Mako==0.9.0
 MarkupSafe==0.18
@@ -20,3 +21,4 @@ nose==1.3.0
 requests==2.0.1
 wsgiref==0.1.2
 psycopg2==2.5.1
+Unipath==1.0
